--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
 	},
 	"dependencies": {
 		"@asteasolutions/zod-to-openapi": "7.3.3",
+		"bcryptjs": "^3.0.2",
 		"cors": "2.8.5",
 		"dotenv": "16.5.0",
 		"express": "5.1.0",
 		"express-rate-limit": "7.5.0",
 		"helmet": "8.1.0",
 		"http-status-codes": "2.3.0",
+		"jsonwebtoken": "^9.0.2",
 		"pino": "9.7.0",
 		"pino-http": "10.5.0",
 		"swagger-ui-express": "5.0.1",
