feat(auth): implement JWT authentication system
- Add login, refresh token, and token verification endpoints
- Implement auth middleware for protected routes
- Update user model with password and token fields
- Configure JWT secret in environment variables
- Remove activity logging wrapper as it's not needed

--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
 		"lineWidth": 120,
 		"bracketSpacing": true
 	},
-	"organizeImports": { "enabled": true },
+	"organizeImports": { "enabled": true, "ignore": ["server.ts"] },
 	"linter": {
 		"enabled": true,
 		"rules": {
@@ -15,6 +15,9 @@
 			"suspicious": {
 				"noExplicitAny": "warn",
 				"noImplicitAnyLet": "warn"
+			},
+			"correctness": {
+				"noUnusedImports": "warn"
 			}
 		}
 	}
