--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@biomejs/biome": "1.9.4",
 		"@types/cors": "2.8.19",
 		"@types/express": "5.0.3",
+		"@types/jsonwebtoken": "^9.0.9",
 		"@types/mock-fs": "^4.13.4",
 		"@types/supertest": "6.0.3",
 		"@types/swagger-ui-express": "4.1.8",
@@ -50,14 +51,9 @@
 		"vitest": "3.2.2"
 	},
 	"tsup": {
-		"entry": [
-			"src/index.ts"
-		],
+		"entry": ["src/index.ts"],
 		"outDir": "dist",
-		"format": [
-			"esm",
-			"cjs"
-		],
+		"format": ["esm", "cjs"],
 		"target": "es2020",
 		"sourcemap": true,
 		"clean": true,
