feat(rbac): implement role-based access control system
- Add RBAC model with permissions schema and middleware
- Extend user model with role relationship
- Update auth service to include role in JWT payload
- Modify auth middleware to be more permissive
- Add Express type definitions for request user
- Update package.json metadata

--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-	"name": "express-typescript-boilerplate",
-	"version": "1.0.14",
+	"name": "express-boilerplate",
+	"version": "1.0.0",
 	"description": "An Express boilerplate backend",
-	"author": "Edwin Hernandez",
-	"repository": "edwinhern/express-typescript-2024",
+	"author": "Falah isnan",
 	"license": "MIT",
 	"main": "index.ts",
 	"private": true,
