--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"license": "MIT",
 	"main": "index.ts",
 	"private": true,
+	"type": "module",
 	"scripts": {
 		"build": "tsc && tsup",
 		"dev": "node --import=tsx --watch src/index.ts",
@@ -19,6 +20,7 @@
 	"dependencies": {
 		"@asteasolutions/zod-to-openapi": "7.3.3",
 		"bcryptjs": "^3.0.2",
+		"better-auth": "^1.2.10",
 		"cors": "2.8.5",
 		"dotenv": "16.5.0",
 		"express": "5.1.0",
@@ -26,6 +28,7 @@
 		"helmet": "8.1.0",
 		"http-status-codes": "2.3.0",
 		"jsonwebtoken": "^9.0.2",
+		"mongoose": "^8.16.0",
 		"pino": "9.7.0",
 		"pino-http": "10.5.0",
 		"swagger-ui-express": "5.0.1",
