--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
 	"tsup": {
 		"entry": ["src/index.ts"],
 		"outDir": "dist",
-		"format": ["esm", "cjs"],
-		"target": "es2020",
+		"format": ["esm"],
+		"target": "es2022",
 		"sourcemap": true,
 		"clean": true,
 		"dts": true,
