feat(auth): implement role seeding and cleanup auth code
- Add seed.roles.json with default roles and permissions
- Implement database seeding logic in Database class
- Add seed script to package.json
- Remove debug console.log statements from auth controller
- Refactor auth lib to use getClient function
- Remove redundant google redirectURI from auth config

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"format": "biome format --write",
 		"test": "vitest run",
 		"test:cov": "vitest run --coverage",
-		"check": "pnpm lint && pnpm format && pnpm build && pnpm test"
+		"check": "pnpm lint && pnpm format && pnpm build && pnpm test",
+		"seed": "node --import=tsx -e \"import('./src/lib/database.ts').then(m => m.db.seed())\""
 	},
 	"dependencies": {
 		"@asteasolutions/zod-to-openapi": "7.3.3",
